--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
           padding-left: 110px;
           text-align: left;
           list-style: none;
+          opacity: 0; /* Initially hide the list */
+          animation: revealList 10s infinite; /* Use keyframes to reveal the list */
         }
 
         .content__container__list__item {
@@ -75,19 +77,11 @@
           50% {opacity:1;}
         }
 
-        @keyframes change {
-          0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-          16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-          33.32%,45.98% {transform:translate3d(0,-50%,0);}
-          49.98%,62.64% {transform:translate3d(0,-75%,0);}
-          66.64%,79.3% {transform:translate3d(0,-50%,0);}
-          83.3%,95.96% {transform:translate3d(0,-25%,0);}
-        }
-
-        .content__container__list {
-          animation-name: change;
-          animation-duration: 10s;
-          animation-iteration-count: infinite;
+        @keyframes revealList {
+          0% { opacity: 0; }
+          10% { opacity: 1; }
+          90% { opacity: 1; }
+          100% { opacity: 0; }
         }
     </style>
 </head>
